# asr_aruco_marker_recognition

./: CMakeLists.txt  License.txt  README.md  package.xml
cfg/: ArucoMarkerRecognition.cfg
include/: aruco_marker_recognition.h  marker_creator.h  marker_detection.h
include/aruco/: markerdetector.cpp
launch/: aruco_marker_recognition.launch  aruco_marker_recognition_core.launch  aruco_marker_recognition_params.yaml  marker_creator.launch
licenses/: third_party_licenses.txt
log/: rosconsole.config
markers/: README.txt
param/: marker_creator_params.yaml
src/: aruco_marker_recognition.cpp  marker_creator.cpp  marker_detection.cpp
