<?xml version="1.0"?>
<package>
  <name>asr_aruco_marker_recognition</name>
  <version>1.0.0</version>
  <description>This package contains a marker recognition system using the ArUco library. 
    It can be used with a mono or stereo camera system but yields better results with the latter.
  </description>
  <author>Allgeyer Tobias, Meißner Pascal, Qattan Mohamad</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/asr_aruco_marker_recognition</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>asr_ros_uri</build_depend>
  <build_depend>asr_ivt</build_depend>
  <build_depend>asr_ivt_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>asr_object_database</build_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>asr_ros_uri</run_depend>
  <run_depend>asr_ivt</run_depend>
  <run_depend>asr_ivt_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>asr_object_database</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>
